--- a/SignUpGenie/.gitignore
+++ b/SignUpGenie/.gitignore
@@ -273,3 +273,7 @@ __pycache__/
 # tools/
 
 # End of https://www.toptal.com/developers/gitignore/api/aspnetcore
+
+# Custom stuff
+*.sqlite
+Migrations/
